@@ -89,6 +89,9 @@ Trunk (unreleased changes)
     szetszwo)
 
     HADOOP-3923. Remove org.apache.hadoop.mapred.StatusHttpServer.  (szetszwo)
+    
+    HADOOP-4622. Explicitly specify interpretor for non-native
+    pipes binaries. (Fredrik Hedberg via johan)    
 
   OPTIMIZATIONS
 
